# create-gtk

./: README.md  index.js  package-lock.json  package.json
template/: README.md  esbuild.js  gitignore  meson.build  tsconfig.json
template/data/: meson.build  metainfo.xml
template/src/: MainWindow.ts  MenuButton.ts  index.ts
